Integrate Sanity CMS schemas from medusa_0816
- Import complete schemas structure: pages, posts, blocks, SEO meta
- Add productCopy schema for Medusa product enhancement
- Configure webhook system for automatic page generation
- Update Sanity config with structureTool and visionTool
- Add API route for handling Sanity webhooks
- Set projectId: m7o2mv1n, dataset: production
- Include service cards, content blocks, featured products schemas
- Ready for content management with rich schema types

--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -23,5 +23,9 @@ REVALIDATE_SECRET=supersecret
 # NEXT_PUBLIC_CACHE_PRODUCTS=60
 
 # Sanity project settings
-NEXT_PUBLIC_SANITY_PROJECT_ID=
+NEXT_PUBLIC_SANITY_PROJECT_ID=m7o2mv1n
 NEXT_PUBLIC_SANITY_DATASET=production
+# Server-side Sanity token (read + preview drafts)
+SANITY_API_READ_TOKEN=
+# Webhook secret for page generation
+SANITY_WEBHOOK_SECRET=medusa-sanity-webhook-secret
